[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethercore"
version = "0.1.0"
description = "The ultimate zero-config AI engine. Beyond Transformers."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "AetherCore Team", email = "dev@aethercore.ai"}
]
keywords = ["ai", "llm", "mamba", "transformer", "deep-learning", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "safetensors>=0.3.1",
    "huggingface-hub>=0.17.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
]

[project.urls]
"Homepage" = "https://github.com/aethercore/aethercore"
"Bug Tracker" = "https://github.com/aethercore/aethercore/issues"
